Update svi artikli index.html

--- a/index.html
+++ b/index.html
@@ -114,79 +114,82 @@
       ],
 	  
 	  "Alkoholna Pića": [
-        { name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
+        { name: "Johnnie Walker Red Label (0.03l)", price: "4.00 KM", img: "johnnie_red.jpg" },
+		{ name: "Johnnie Walker Black Label (0.03l)", price: "6.00 KM", img: "johnnie_black.jpg" },
+		{ name: "Vodka Smirnoff (0.03l)", price: "4.00 KM", img: "smirnoff.jpg" },
+		{ name: "Vodka Ciroc (0.03l)", price: "8.00 KM", img: "ciroc.jpg" },
+		{ name: "Gin Gordon's (0.03l)", price: "4.00 KM", img: "gin_gordons.jpg" },
+		{ name: "Gin Gordon's Pink (0.03l)", price: "4.00 KM", img: "gin_gordons_pink.jpg" },
+		{ name: "Gin Tanqueray (0.03l)", price: "5.50 KM", img: "gin_tanqueray.jpg" },
+		{ name: "Bailey's (0.03l)", price: "5.00 KM", img: "baileys.jpg" },
+		{ name: "Tequila La Quincha (0.03l)", price: "4.00 KM", img: "tequila_la_quincha.jpg" },
+		{ name: "Malibu (0.03l)", price: "4.50 KM", img: "malibu.jpg" },
+		{ name: "Martini Bianco (0.03l)", price: "5.00 KM", img: "martini_bianco.jpg" },
+		{ name: "Pelinkovac Maraska (0.03l)", price: "3.00 KM", img: "pelinkovac_maraska.jpg" },
+		{ name: "Vlahovac Maraska (0.03l)", price: "3.00 KM", img: "vlahovac_maraska.jpg" },
+		{ name: "Ballentines (0.03l)", price: "5.00 KM", img: "ballentines.jpg" },
+		{ name: "Jack Daniels (0.03l)", price: "5.00 KM", img: "jack_daniels.jpg" },
+		{ name: "Hennesy (0.03l)", price: "8.00 KM", img: "hennesy.jpg" },
+		{ name: "Remy martin (0.03l)", price: "8.00 KM", img: "remy_martin.jpg" },
+		{ name: "Jägermeister (0.03l)", price: "4.00 KM", img: "jagermeister.jpg" },
+		{ name: "Rum Bacardi (0.03l)", price: "4.50 KM", img: "rum_bacardi.jpg" },
+		{ name: "Rum Captain Morgan (0.03l)", price: "4.00 KM", img: "rum_captain_morgan.jpg" },
+		{ name: "Campari (0.03l)", price: "5.00 KM", img: "campari.jpg" },
+		{ name: "Stock (0.03l)", price: "4.00 KM", img: "stock.jpg" },
+		{ name: "Chivas Regal (0.03l)", price: "6.00 KM", img: "chivas_regal.jpg" },
+		{ name: "Kuhano vino (0.20l)", price: "6.00 KM", img: "kuhano_vino.jpg" },
       ],
 	  
 	  "Likeri i Rakije": [
-        { name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
+        { name: "Višnjevac Maraska (0.03l)", price: "3.00 KM", img: "visnjevac_maraska.jpg" },
+		{ name: "Medica Maraska (0.03l)", price: "3.00 KM", img: "medica_maraska.jpg" },
+		{ name: "Orahovac Maraska (0.03l)", price: "3.00 KM", img: "orahovac_maraska.jpg" },
+		{ name: "Viljamovka (0.03l)", price: "4.00 KM", img: "viljamovka.jpg" },
+		{ name: "Jabuka (0.03l)", price: "3.00 KM", img: "jabuka.jpg" },
+		{ name: "Šljiva (0.03l)", price: "3.00 KM", img: "sljiva.jpg" },
+		{ name: "Dunja (0.03l)", price: "3.00 KM", img: "dunja.jpg" },
+		{ name: "Kajsija (0.03l)", price: "3.00 KM", img: "kajsija.jpg" },
+		{ name: "Travarica (0.03l)", price: "3.00 KM", img: "travarica.jpg" },
+		{ name: "Loza (0.03l)", price: "3.00 KM", img: "loza.jpg" },
       ],
 	  
 	  "Pivo": [
-        { name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
+        { name: "Heineken (0.33l)", price: "5.00 KM", img: "heineken.jpg" },
+		{ name: "Heineken Silver (0.33l)", price: "5.00 KM", img: "heineken_silver.jpg" },
+		{ name: "Heineken 0% alc. (0.33l)", price: "5.00 KM", img: "heineken0.jpg" },
+		{ name: "Karlovačko (0.33l)", price: "4.00 KM", img: "karlovacko.jpg" },
+		{ name: "Karlovačko tamno (0.50l)", price: "4.00 KM", img: "karlovacko_tamno.jpg" },
+		{ name: "Karlovačko Radler (0.33l)", price: "4.00 KM", img: "karlovacko_radler.jpg" },
+		{ name: "Karlovačko točeno (0.33l)", price: "3.00 KM", img: "karlovacko_toceno_malo.jpg" },
+		{ name: "Karlovačko točeno (0.50l)", price: "4.00 KM", img: "karlovacko_toceno.jpg" },
+		{ name: "Laško (0.33l)", price: "4.00 KM", img: "lasko.jpg" },
+		{ name: "Laško Malt (0.33l)", price: "4.00 KM", img: "lasko_malt.jpg" },
+		{ name: "Krušovice (0.50l)", price: "4.00 KM", img: "krusovice.jpg" },
+		{ name: "Union (0.33l)", price: "4.00 KM", img: "union.jpg" },
+		{ name: "Sol (0.33l)", price: "2.00 KM", img: "sol.jpg" },
+		{ name: "Lagunitas (0.35l)", price: "65.00 KM", img: "lagunitas.jpg" },
+		{ name: "Sarajevsko premium (0.33l)", price: "4.50 KM", img: "sarajevsko_premium_malo.jpg" },
+		{ name: "Sarajevsko premium (0.50l)", price: "7.00 KM", img: "sarajevsko_premium.jpg" },
+		{ name: "Corona (0.33l)", price: "6.00 KM", img: "corona.jpg" },
       ],
 	  
 	  "Cider": [
-        { name: "", price: "2.50 KM", img: ".jpg" },
+        { name: "Somersby (0.33l)", price: "5.00 KM", img: "somersby.jpg" },
       ],
 	  
 	  "Vina": [
-        { name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
+        { name: "Cabarnet Franc (0.75l)", price: "35.00 KM", img: "cabarnet_franc.jpg" },
+		{ name: "Merlot (0.75l)", price: "45.00 KM", img: "merlot.jpg" },
+		{ name: "Merlot (0.187l)", price: "6.00 KM", img: "merlot_casa.jpg" },
+		{ name: "Pinot sivi (0.75l)", price: "35.00 KM", img: "pinot_sivi.jpg" },
+		{ name: "Plava (0.75l)", price: "50.00 KM", img: "plava.jpg" },
+		{ name: "Soave (0.187l)", price: "6.00 KM", img: "soave.jpg" },
+		{ name: "Bambus (0.4l)", price: "6.00 KM", img: "bambus.jpg" },
       ],
 	  
 	  "Champagnes": [
-        { name: "", price: "2.50 KM", img: ".jpg" },
-		{ name: "", price: "2.50 KM", img: ".jpg" },
+        { name: "Cristal (0.75l)", price: "99.00 KM", img: "cristal.jpg" },
+		{ name: "Moët&Chandon", price: "259.00 KM", img: "moet_chandon.jpg" },
       ],
     };
 
