--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
             <h2 class="text-2xl font-bold mb-4 mt-10">${group}</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
               ${(items[group] || []).map(item => `
-                <div class="bg-gray-800 p-4 rounded-xl">
-                  <img src="images/${item.img}" alt="${item.name}" class="w-full h-40 object-cover rounded mb-2">
+                <div class="bg-gray-900 p-4 rounded-xl">
+                  <img src="images/${item.img}" alt=" " class="w-full h-20 object-cover rounded mb-2">
                   <div class="font-semibold">${item.name}</div>
                   <div class="text-sm">${item.price}</div>
                 </div>
