--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         content.innerHTML += `
           <div id="${id}" class="mb-10">
-            <h2 class="text-2xl text-bg-amber-500 font-bold mb-4 mt-10">${group}</h2>
+            <h2 class="text-2xl text-amber-500 font-bold mb-4 mt-10">${group}</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
               ${(items[group] || []).map(item => `
                 <div class="bg-gray-900 p-4 rounded-xl">
