--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script>
     const categories = {
       	alcoholic: ["Cocktails", "Alkoholna Pića", "Likeri i Rakije", "Pivo", "Cider", "Vina", "Champagnes"],
-      	nonalcoholic: ["Topli Napici", "Mineralna Voda", "Bezalkoholna Pića", "Prirodni Sokovi", "Energetski Napici"],
+      	nonalcoholic: ["Topli Napici", "Mineralna Voda", "Bezalkoholna Pića", "Domaći sokovi", "Prirodni Sokovi", "Energetski Napici"],
       	shisha: ["Shisha"],
       	all: ["Topli Napici", "Mineralna Voda", "Bezalkoholna Pića", "Prirodni Sokovi", "Energetski Napici", "Shisha", "Cocktails", "Alkoholna Pića", "Likeri i Rakije", "Pivo", "Cider", "Vina", "Champagnes"]
     };
@@ -57,43 +57,50 @@
       ],
 	  
       	"Mineralna Voda": [
-        	{ name: "Kisela voda (0.25l)", price: "2.50 KM", img: "kisela_voda.jpg" },
-		{ name: "Exotic (0.25l)", price: "2.50 KM", img: "exotic.jpg" },
-		{ name: "Prirodna voda (0.25l)", price: "2.00 KM", img: "prirodna_voda.jpg" },
-		{ name: "Voda limun (0.25l)", price: "2.50 KM", img: "voda_limun.jpg" },
+        	{ name: "Kisela voda (0.25l)", price: "3.00 KM", img: "kisela_voda.jpg" },
+		{ name: "Exotic (0.25l)", price: "3.00 KM", img: "exotic.jpg" },
+		{ name: "Prirodna voda (0.25l)", price: "2.50 KM", img: "prirodna_voda.jpg" },
+		{ name: "Voda limun (0.25l)", price: "3.00 KM", img: "voda_limun.jpg" },
       ],
 	  
 	"Bezalkoholna Pića": [
-        	{ name: "Orangina (Regular, Rouge) (0.25l)", price: "4.00 KM", img: "orangina.jpg" },
-		{ name: "Limona (Original, Mint, Bitter Lemon) (0.25l)", price: "3.50 KM", img: "limona.jpg" },
+        	{ name: "Orangina (Regular, Rouge) (0.25l)", price: "4.50 KM", img: "orangina.jpg" },
+		{ name: "Limona (Original, Mint, Bitter Lemon) (0.25l)", price: "4.00 KM", img: "limona.jpg" },
 		{ name: "Jupi (Tangerina, Orange) (0.25l)", price: "3.00 KM", img: "jupi.jpg" },
 		{ name: "Spezi (0.25l) – 3.50 KM", price: "3.50 KM", img: "spezi.jpg" },
-		{ name: "Juicy Vita (15g) – 2.50 KM", price: "2.50 KM", img: "juicy_vita.jpg" },
-		{ name: "Coca-Cola (Original, Zero) (0.25l)", price: "3.50 KM", img: "coca_cola.jpg" },
-		{ name: "Schweppes (Bitter Lemon, Tonic, Tangerina) (0.25l)", price: "3.50 KM", img: "schweppes.jpg" },
-		{ name: "Fanta (0.25l)", price: "3.50 KM", img: "fanta.jpg" },
-		{ name: "Sprite (0.25l)", price: "3.50 KM", img: "sprite.jpg" },
-		{ name: "Cockta (0.25l)", price: "2.50 KM", img: "cockta.jpg" },
+		{ name: "Juicy Vita (15g) – 2.50 KM", price: "3.00 KM", img: "juicy_vita.jpg" },
+		{ name: "Coca-Cola (Original, Zero) (0.25l)", price: "4.00 KM", img: "coca_cola.jpg" },
+		{ name: "Schweppes (Bitter Lemon, Tonic, Tangerina) (0.25l)", price: "4.00 KM", img: "schweppes.jpg" },
+		{ name: "Fanta (0.25l)", price: "4.00 KM", img: "fanta.jpg" },
+		{ name: "Sprite (0.25l)", price: "4.00 KM", img: "sprite.jpg" },
+		{ name: "Cockta (0.25l)", price: "4.00 KM", img: "cockta.jpg" },
       ],
 	  
 	"Prirodni Sokovi": [
-        	{ name: "Juicy Narandža (0.20l)", price: "3.50 KM", img: "j_narandza.jpg" },
-		{ name: "Juicy Jagoda (0.20l)", price: "3.50 KM", img: "j_jagoda.jpg" },
-		{ name: "Juicy Višnja (0.20l)", price: "3.50 KM", img: "j_visnja.jpg" },
-		{ name: "Juicy Breskva (0.20l)", price: "3.50 KM", img: "j_breskva.jpg" },
-		{ name: "Juicy Ananas (0.20l)", price: "3.50 KM", img: "j_ananas.jpg" },
-		{ name: "Juicy Jabuka (0.20l)", price: "3.50 KM", img: "j_jabuka.jpg" },
-		{ name: "Juicy Ribizla (0.20l)", price: "3.50 KM", img: "j_ribizla.jpg" },
-		{ name: "Ledeni čaj brusnica (0.25l)", price: "3.50 KM", img: "led_caj_brusnica.jpg" },
-		{ name: "Ledeni čaj breskva (0.25l)", price: "3.50 KM", img: "led_caj_breskva.jpg" },
-		{ name: "Cijeđena narandža (0.30l)", price: "4.00 KM", img: "cijedjena_narandza.jpg" },
-		{ name: "Limunada (0.30l)", price: "3.50 KM", img: "limunada.jpg" },
-		{ name: "Cijeđeni mix (0.30l)", price: "4.00 KM", img: "cijedjeni_mix.jpg" },
+        	{ name: "Juicy Narandža (0.20l)", price: "4.00 KM", img: "j_narandza.jpg" },
+		{ name: "Juicy Jagoda (0.20l)", price: "4.00 KM", img: "j_jagoda.jpg" },
+		{ name: "Juicy Višnja (0.20l)", price: "4.00 KM", img: "j_visnja.jpg" },
+		{ name: "Juicy Breskva (0.20l)", price: "4.00 KM", img: "j_breskva.jpg" },
+		{ name: "Juicy Ananas (0.20l)", price: "4.00 KM", img: "j_ananas.jpg" },
+		{ name: "Juicy Jabuka (0.20l)", price: "4.00 KM", img: "j_jabuka.jpg" },
+		{ name: "Juicy Ribizla (0.20l)", price: "4.00 KM", img: "j_ribizla.jpg" },
+		{ name: "Ledeni čaj brusnica (0.25l)", price: "4.00 KM", img: "led_caj_brusnica.jpg" },
+		{ name: "Ledeni čaj breskva (0.25l)", price: "4.00 KM", img: "led_caj_breskva.jpg" },
+		{ name: "Cijeđena narandža (0.30l)", price: "5.00 KM", img: "cijedjena_narandza.jpg" },
+		{ name: "Limunada (0.30l)", price: "4.00 KM", img: "limunada.jpg" },
+		{ name: "Cijeđeni mix (0.30l)", price: "6.00 KM", img: "cijedjeni_mix.jpg" },
       ],
+
+	"Domaći sokovi": [
+        	{ name: "Zova", price: "4.00 KM", img: "zova.jpg" },
+		{ name: "Višnja", price: "4.00 KM", img: "visnja.jpg" },
+		{ name: "Jagoda", price: "4.00 KM", img: "jagoda.jpg" },
+		{ name: "Menta", price: "4.00 KM", img: "menta.jpg" },
+		{ name: "Malina", price: "4.00 KM", img: "malina.jpg" },
 	  
 	"Energetski Napici": [
         	{ name: "Red Bull (0.25l)", price: "5.00 KM", img: "red_bull.jpg" },
-		{ name: "Rooster/Richard (0.25l)", price: "5.00 KM", img: "rooster.jpg" },
+		{ name: "Rooster/Richard (0.25l)", price: "3.50 KM", img: "rooster.jpg" },
       ],
 	  
 	"Shisha": [
@@ -104,29 +111,30 @@
 	  
 	"Cocktails": [
         	{ name: "Bahama Mama (0.40l)", price: "9.00 KM", img: "bahama_mama.jpg" },
-		{ name: "Cuba Libre (0.4l)", price: "8.00 KM", img: "cuba_libre.jpg" },
-		{ name: "Blue Lagoon (0.4l)", price: "8.00 KM", img: "blue_lagoon.jpg" },
-		{ name: "Tequila Sunrise (0.4l)", price: "8.00 KM", img: "tequila_sunrise.jpg" },
+		{ name: "Cuba Libre (0.4l)", price: "9.00 KM", img: "cuba_libre.jpg" },
+		{ name: "Blue Lagoon (0.4l)", price: "9.00 KM", img: "blue_lagoon.jpg" },
+		{ name: "Tequila Sunrise (0.4l)", price: "10.00 KM", img: "tequila_sunrise.jpg" },
 		{ name: "Long Island (0.4l)", price: "10.00 KM", img: "long_island.jpg" },
-		{ name: "Mojito (0.4l)", price: "8.00 KM", img: "mojito.jpg" },
-		{ name: "Sex On The Beach (0.4l)", price: "8.00 KM", img: "sex_on_the_beach.jpg" },
+		{ name: "Mojito (0.4l)", price: "9.00 KM", img: "mojito.jpg" },
+		{ name: "Sex On The Beach (0.4l)", price: "9.00 KM", img: "sex_on_the_beach.jpg" },
 		{ name: "Shots (0.03l)", price: "5.00 KM", img: "shots.jpg" },
-		{ name: "Bezalkoholni kokteli (0.4l)", price: "6.00 KM", img: "bezalkoholni_koktel.jpg" },
+		{ name: "Bezalkoholni kokteli (0.4l)", price: "8.00 KM", img: "bezalkoholni_koktel.jpg" },
       ],
 	  
 	"Alkoholna Pića": [
         	{ name: "Johnnie Walker Red Label (0.03l)", price: "4.00 KM", img: "johnnie_red.jpg" },
-		{ name: "Johnnie Walker Black Label (0.03l)", price: "6.00 KM", img: "johnnie_black.jpg" },
-		{ name: "Vodka Smirnoff (0.03l)", price: "4.00 KM", img: "smirnoff.jpg" },
+		{ name: "Johnnie Walker Black Label (0.03l)", price: "7.00 KM", img: "johnnie_black.jpg" },
+		{ name: "Vodka Smirnoff (0.03l)", price: "5.00 KM", img: "smirnoff.jpg" },
 		{ name: "Vodka Ciroc (0.03l)", price: "8.00 KM", img: "ciroc.jpg" },
-		{ name: "Gin Gordon's (0.03l)", price: "4.00 KM", img: "gin_gordons.jpg" },
-		{ name: "Gin Gordon's Pink (0.03l)", price: "4.00 KM", img: "gin_gordons_pink.jpg" },
-		{ name: "Gin Tanqueray (0.03l)", price: "5.50 KM", img: "gin_tanqueray.jpg" },
+		{ name: "Vodka Belvedere (0.03l)", price: "8.00 KM", img: "belvedere.jpg" },
+		{ name: "Gin Gordon's (0.03l)", price: "5.00 KM", img: "gin_gordons.jpg" },
+		{ name: "Gin Gordon's Pink (0.03l)", price: "5.00 KM", img: "gin_gordons_pink.jpg" },
+		{ name: "Gin Tanqueray (0.03l)", price: "7.00 KM", img: "gin_tanqueray.jpg" },
 		{ name: "Bailey's (0.03l)", price: "5.00 KM", img: "baileys.jpg" },
 		{ name: "Tequila La Quincha (0.03l)", price: "4.00 KM", img: "tequila_la_quincha.jpg" },
 		{ name: "Malibu (0.03l)", price: "4.50 KM", img: "malibu.jpg" },
 		{ name: "Martini Bianco (0.03l)", price: "5.00 KM", img: "martini_bianco.jpg" },
-		{ name: "Pelinkovac Maraska (0.03l)", price: "3.00 KM", img: "pelinkovac_maraska.jpg" },
+		{ name: "Pelinkovac Maraska (0.03l)", price: "4.00 KM", img: "pelinkovac_maraska.jpg" },
 		{ name: "Vlahovac Maraska (0.03l)", price: "3.00 KM", img: "vlahovac_maraska.jpg" },
 		{ name: "Ballentines (0.03l)", price: "5.00 KM", img: "ballentines.jpg" },
 		{ name: "Jack Daniels (0.03l)", price: "5.00 KM", img: "jack_daniels.jpg" },
@@ -142,16 +150,16 @@
       ],
 	  
 	"Likeri i Rakije": [
-        	{ name: "Višnjevac Maraska (0.03l)", price: "3.00 KM", img: "visnjevac_maraska.jpg" },
+        	{ name: "Višnjevac Maraska (0.03l)", price: "4.00 KM", img: "visnjevac_maraska.jpg" },
 		{ name: "Medica Maraska (0.03l)", price: "3.00 KM", img: "medica_maraska.jpg" },
 		{ name: "Orahovac Maraska (0.03l)", price: "3.00 KM", img: "orahovac_maraska.jpg" },
-		{ name: "Viljamovka (0.03l)", price: "4.00 KM", img: "viljamovka.jpg" },
-		{ name: "Jabuka (0.03l)", price: "3.00 KM", img: "jabuka.jpg" },
-		{ name: "Šljiva (0.03l)", price: "3.00 KM", img: "sljiva.jpg" },
-		{ name: "Dunja (0.03l)", price: "3.00 KM", img: "dunja.jpg" },
-		{ name: "Kajsija (0.03l)", price: "3.00 KM", img: "kajsija.jpg" },
-		{ name: "Travarica (0.03l)", price: "3.00 KM", img: "travarica.jpg" },
-		{ name: "Loza (0.03l)", price: "3.00 KM", img: "loza.jpg" },
+		{ name: "Viljamovka (0.03l)", price: "5.00 KM", img: "viljamovka.jpg" },
+		{ name: "Jabuka (0.03l)", price: "4.00 KM", img: "jabuka.jpg" },
+		{ name: "Šljiva (0.03l)", price: "4.00 KM", img: "sljiva.jpg" },
+		{ name: "Dunja (0.03l)", price: "5.00 KM", img: "dunja.jpg" },
+		{ name: "Kajsija (0.03l)", price: "5.00 KM", img: "kajsija.jpg" },
+		{ name: "Travarica (0.03l)", price: "4.00 KM", img: "travarica.jpg" },
+		{ name: "Loza (0.03l)", price: "4.00 KM", img: "loza.jpg" },
       ],
 	  
 	"Pivo": [
@@ -160,16 +168,17 @@
 		{ name: "Heineken 0% alc. (0.33l)", price: "5.00 KM", img: "heineken0.jpg" },
 		{ name: "Karlovačko (0.33l)", price: "4.00 KM", img: "karlovacko.jpg" },
 		{ name: "Karlovačko tamno (0.50l)", price: "4.00 KM", img: "karlovacko_tamno.jpg" },
-		{ name: "Karlovačko Radler (0.33l)", price: "4.00 KM", img: "karlovacko_radler.jpg" },
+		{ name: "Karlovačko Radler (0.33l)", price: "4.50 KM", img: "karlovacko_radler.jpg" },
 		{ name: "Karlovačko točeno (0.33l)", price: "3.00 KM", img: "karlovacko_toceno_malo.jpg" },
 		{ name: "Karlovačko točeno (0.50l)", price: "4.00 KM", img: "karlovacko_toceno.jpg" },
 		{ name: "Laško (0.33l)", price: "4.00 KM", img: "lasko.jpg" },
 		{ name: "Laško Malt (0.33l)", price: "4.00 KM", img: "lasko_malt.jpg" },
 		{ name: "Krušovice (0.50l)", price: "4.00 KM", img: "krusovice.jpg" },
+		{ name: "Ipa (0.33l)", price: "6.00 KM", img: "ipa.jpg" },
 		{ name: "Union (0.33l)", price: "4.00 KM", img: "union.jpg" },
 		{ name: "Sol (0.33l)", price: "2.00 KM", img: "sol.jpg" },
 		{ name: "Lagunitas (0.35l)", price: "65.00 KM", img: "lagunitas.jpg" },
-		{ name: "Sarajevsko premium (0.33l)", price: "4.50 KM", img: "sarajevsko_premium_malo.jpg" },
+		{ name: "Sarajevsko premium (0.33l)", price: "5.00 KM", img: "sarajevsko_premium_malo.jpg" },
 		{ name: "Sarajevsko premium (0.50l)", price: "7.00 KM", img: "sarajevsko_premium.jpg" },
 		{ name: "Corona (0.33l)", price: "6.00 KM", img: "corona.jpg" },
       ],
@@ -179,13 +188,11 @@
       ],
 	  
 	"Vina": [
-        	{ name: "Cabarnet Franc (0.75l)", price: "35.00 KM", img: "cabarnet_franc.jpg" },
-		{ name: "Merlot (0.75l)", price: "45.00 KM", img: "merlot.jpg" },
-		{ name: "Merlot (0.187l)", price: "6.00 KM", img: "merlot_casa.jpg" },
-		{ name: "Pinot sivi (0.75l)", price: "35.00 KM", img: "pinot_sivi.jpg" },
-		{ name: "Plava (0.75l)", price: "50.00 KM", img: "plava.jpg" },
-		{ name: "Soave (0.187l)", price: "6.00 KM", img: "soave.jpg" },
-		{ name: "Bambus (0.4l)", price: "6.00 KM", img: "bambus.jpg" },
+        	{ name: "Casa crnog vina", price: "8.00 KM", img: "crno_vino_casa.jpg" },
+		{ name: "Casa bijelog vina", price: "8.00 KM", img: "bijelo_vino_casa.jpg" },
+		{ name: "Gemišt", price: "8.00 KM", img: "gemist.jpg" },
+		{ name: "Crno vino (0.7l)", price: "45.00 KM", img: "crno_vino.jpg" },
+		{ name: "Bijelo vino (0.7l)", price: "45.00 KM", img: "bijelo_vino.jpg" },
       ],
 	  
 	"Champagnes": [
