--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <script>
     const categories = {
       	alcoholic: ["Cocktails", "Alkoholna Pića", "Likeri i Rakije", "Pivo", "Cider", "Vina", "Champagnes"],
-      	nonalcoholic: ["Topli Napici", "Mineralna Voda", "Bezalkoholna Pića", "Domaći sokovi", "Prirodni Sokovi", "Energetski Napici"],
+      	nonalcoholic: ["Topli Napici", "Mineralna Voda", "Bezalkoholna Pića", "Prirodni Sokovi", "Domaći sokovi", "Energetski Napici"],
       	shisha: ["Shisha"],
-      	all: ["Topli Napici", "Mineralna Voda", "Bezalkoholna Pića", "Prirodni Sokovi", "Energetski Napici", "Shisha", "Cocktails", "Alkoholna Pića", "Likeri i Rakije", "Pivo", "Cider", "Vina", "Champagnes"]
+      	all: ["Topli Napici", "Mineralna Voda", "Bezalkoholna Pića", "Prirodni Sokovi", "Domaći sokovi", "Energetski Napici", "Shisha", "Cocktails", "Alkoholna Pića", "Likeri i Rakije", "Pivo", "Cider", "Vina", "Champagnes"]
     };
 
     const items = {
