--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>Mr. Smith Menu</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-zinc-950 text-black">
+<body class="bg-zinc-950 text-white">
   <!-- Front Page -->
   <div id="home" class="min-h-screen flex flex-col items-center justify-center">
     <img src="logo.png" alt="Logo" class="w-32 mb-8">
     <div class="flex flex-col gap-4">
-      <button onclick="navigate('alcoholic')" class="bg-amber-500 hover:bg-amber-600 px-6 py-3 rounded-xl text-xl">Alkoholna pića</button>
-      <button onclick="navigate('nonalcoholic')" class="bg-amber-500 hover:bg-amber-600 px-6 py-3 rounded-xl text-xl">Bezalkoholna pića</button>
-      <button onclick="navigate('shisha')" class="bg-amber-500 hover:bg-amber-600 px-6 py-3 rounded-xl text-xl">Shisha</button>
-      <button onclick="navigate('all')" class="bg-red-500 hover:bg-red-600 px-6 py-3 rounded-xl text-xl">Sve Grupe</button>
+      <button onclick="navigate('alcoholic')" class="hover:bg-gray-900 outline outline-gray-700 px-6 py-3 rounded-xl text-xl">Alkoholna pića</button>
+      <button onclick="navigate('nonalcoholic')" class="hover:bg-gray-900 outline outline-gray-700 px-6 py-3 rounded-xl text-xl">Bezalkoholna pića</button>
+      <button onclick="navigate('shisha')" class="hover:bg-gray-900 outline outline-gray-700 px-6 py-3 rounded-xl text-xl">Shisha</button>
+      <button onclick="navigate('all')" class="hover:bg-gray-900 outline outline-gray-700 px-6 py-3 rounded-xl text-xl text-red-600">Sve Grupe</button>
     </div>
   </div>
 
@@ -36,7 +36,7 @@
 
     const items = {
       	"Topli Napici": [
-        	{ name: "Espresso", price: "2.50 KM", img: "espresso.jpg" },
+        	{ name: "Espresso", price: "2.50 KM", img: "https://images.unsplash.com/photo-1510591509098-f4fdc6d0ff04?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" },
         	{ name: "Mali macchiato", price: "3.00 KM", img: "mali_macchiato.jpg" },
         	{ name: "Veliki macchiato", price: "3.50 KM", img: "veliki_macchiato.jpg" },
         	{ name: "Cappuccino", price: "4.00 KM", img: "cappuccino.jpg" },
@@ -228,9 +228,12 @@
             <h2 class="text-2xl text-amber-500 font-bold mb-4 mt-10">${group}</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
               ${(items[group] || []).map(item => `
-                <div class="bg-gray-900 p-4 rounded-xl">
-                  <div class="font-semibold">${item.name}</div>
-                  <div class="text-sm">${item.price}</div>
+                <div class="bg-gray-900 p-4 rounded-xl flex items-center gap-4">
+		  <div class="flex-1">
+                    <div class="font-semibold">${item.name}</div>
+                    <div class="text-sm">${item.price}</div>
+		  </div>
+		  <img src="${item.img}" alt=" " class="w-20 h-20 object-cover rounded mb-2">
                 </div>
               `).join('')}
             </div>
